@@ -1,5 +1,7 @@
 Changes for 1.1.1:
 
+ - added removal of stat file on agent shutdown (Alexei)
+ - added new parameter StatFile to ZABBIX config file (Alexei)
  - fixed processing of web.page.get and long data sent by agent (Alexei)
  - fixed B64 en-decoding of large data (Alexei)
  - fixed problem with undefined PACKETSZ under Mac OS/X (Alexei)
